# Bit-array

./: CMakeLists.txt  README.md  main.cpp  test
lib/: CMakeLists.txt  bit_array.cpp  bit_array.hpp  bit_array_overloads_logic.cpp
tests/: CMakeLists.txt  bit_arr_test.cpp
